valid openapi spec
