# src/app/api/guesses/route.ts
@@ -7,6 +7,7 @@ import { loadAnswers } from "@/api-biz/answers";
  * /api/guesses:
  *   get:
  *     description: Returns the number of guesses and potentially winning guesses
+ *     operationId: getGuessesLength
  *     responses:
  *       200:
  *         description: A JSON object containing the length of guesses and potentially winning guesses
